   but a new CDR backend is still in development.

CDR
---
 * 'linkedid' and 'peeraccount' are new CDR fields available to CDR officianados.
   linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
   etc are performed. Thus the peices of CDR can be grouped into multilegged sets.
 * Multiple files and formats can now be specified in cdr_custom.conf.

Calendaring for Asterisk
------------------------
 * A new set of modules were added supporing calendar integration with Asterisk.
   Dialplan functions for reading from and writing to calendars are included,
   as well as the ability to execute dialplan logic upon calendar event notifications.
   iCalendar, CalDAV, and Exchange Server calendars are supported (Exchange support
   only tested on Exchange Server 2003 with no support for forms-based authentication).

Multicast RTP Support
---------------------
 * A new RTP engine and channel driver have been added which supports Multicast RTP.
   The channel driver can be used with the Page application to perform multicast RTP
   paging. The dial string format is: MulticastRTP/<type>/<destination>/<control address>
   Type can be either basic or linksys.
   Destination is the IP address and port for the RTP packets.
   Control address is specific to the linksys type and is used for sending the control
   packets unique to them.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for subscribing to a voice mailbox on a remote server and
   making the new/old message count available to local devices.